@@ -4,7 +4,7 @@ Gem::Specification.new do |spec|
 
   spec.name                      =  'parallel-ancestry'
   spec.rubyforge_project         =  'parallel-ancestry'
-  spec.version                   =  '1.0.7'
+  spec.version                   =  '1.0.8'
 
   spec.summary                   =  "Provides parallel implementations of inheritance hierarchies. This is useful both for tracking the existing inheritance tree and for creating trees that function independently of inheritance models determined internal to Ruby."
   spec.description               =  'Create and track parallel inheritance hierarchies. Hook parallel hierarchies (by including a module) to automatically update/register ancestry at include and extend, or update/register only manually. Manual registration permits definitions of ancestry across, for example, instances of the same type or instances of entirely different types. Implementation is provided by simple child/parent trees with an block to choose which parent. This permits a simple multiple inheritance model very similar to how Ruby handles modules. Conflicts for multiple inheritance are resolved by the parent most recently named for the block match. Used heavily by CascadingConfiguration gem (cascading-configuration) as well as by forthcoming Persistence and Magnets gems (persistence and magnets).'
