@@ -22,3 +22,7 @@ Added unique-array for children and parents, which means now :include? etc. use 
 
 Added is_extending parameter (default = false) to :initialize_inheriting_instance.
 Fix for subclass inheritance passing subclass instance (self) rather than class instance.
+
+== 6/19/2012
+
+Changed include/extend hooks to prepend.
